--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "cheerio": "^1.0.0-rc.12",
+    "jsdom": "^27.4.0",
     "next": "^14.2.0",
     "puppeteer": "^24.34.0",
     "puppeteer-extra": "^3.3.6",
